--- a/CIP/page-wedding_chapel_gazebo_banquet_hall_rental.css
+++ b/CIP/page-wedding_chapel_gazebo_banquet_hall_rental.css
@@ -42,6 +42,13 @@ h3 {
   padding-left: 25px;
 }
 
+#form .error {
+  margin-top: 15px;
+  padding: 25px;
+  background-color: #de8585;
+  color: #FFF;
+}
+
 #reserve_results {
     margin: 25px 0
 }
