--- a/CIP/page-wedding_chapel_gazebo_banquet_hall_rental.css
+++ b/CIP/page-wedding_chapel_gazebo_banquet_hall_rental.css
@@ -49,6 +49,11 @@ h3 {
   color: #FFF;
 }
 
+  #form .error ul {
+    list-style: disc;
+    padding-left: 25px;
+  }
+
 #reserve_results {
     margin: 25px 0
 }
