--- a/CIP/page-wedding_chapel_gazebo_banquet_hall_rental.css
+++ b/CIP/page-wedding_chapel_gazebo_banquet_hall_rental.css
@@ -3,6 +3,7 @@ input[type=password],
 input[type=email],
 input[type=url],
 input[type=date],
+input[type=number],
 input[type=tel],
 select,
 textarea {
@@ -12,6 +13,12 @@ textarea {
     width: 100%!important;
     max-width: 600px!important
 }
+
+  input[type="number"] {
+    border: none;
+    padding: 12px 15px;
+    max-width: 200px !important;
+  }
 
 h3 {
     margin-top: 15px
